--- a/package.json
+++ b/package.json
@@ -42,5 +42,11 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/react-dom": "^17.0.3",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/redux-form": "^8.3.1",
+    "typescript": "^4.2.4"
+  }
 }
